--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "area-polygon": "1.0.1",
     "convert-units": "2.3.4",
     "html-webpack-plugin": "5.3.1",
+    "file-saver": "^2.0.1",
     "immutable": "3.8.2",
     "immutablediff": "0.4.4",
     "immutablepatch": "0.5.0",
@@ -81,7 +82,8 @@
     "react-svg-pan-zoom": "2.18.0",
     "react-tabs": "3.0.0",
     "redux": "4.0.5",
-    "shortid": "2.2.16"
+    "shortid": "2.2.14",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -97,7 +99,6 @@
     "gh-pages": "2.0.1",
     "immutable-devtools": "0.1.5",
     "exports-loader": "^0.7.0",
-    "is-wsl": "1.1.0",
     "import-loader": "^1.0.1",
     "import-three-examples": "^2.1.6",
     "imports-loader": "^0.8.0",
