--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "node-polyfill-webpack-plugin": "^1.0.3",
     "path-browserify": "^1.0.1",
     "polylabel": "1.1.0",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "15.7.2",
     "react-icons": "3.5.0",
     "react-redux": "5.0.7",
