--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
   "scripts": {
-    "dev": "yarn start",
-    "start": "webpack-dev-server --inline --config demo/webpack.config.js --port 9000 --mode development",
-    "build-demo": "webpack --config demo/webpack.config.js --mode production",
+    "dev": "webpack serve --config demo/webpack.config.js --mode development --env development",
+    "build-demo": "webpack --config demo/webpack.config.js --mode production  --env production",
     "build-commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
     "build-es": "cross-env BABEL_ENV=es babel src --copy-files --out-dir es",
     "build": "npm run clean && npm run build-demo && npm run build-commonjs && npm run build-es",
@@ -69,18 +68,20 @@
     "@mapbox/react-range": "0.0.7",
     "area-polygon": "1.0.1",
     "convert-units": "2.3.4",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "5.3.1",
     "immutable": "3.8.2",
     "immutablediff": "0.4.4",
     "immutablepatch": "0.5.0",
-    "polylabel": "1.0.2",
+    "node-polyfill-webpack-plugin": "^1.0.3",
+    "path-browserify": "^1.0.1",
+    "polylabel": "1.1.0",
     "prop-types": "15.7.2",
     "react-icons": "3.5.0",
     "react-redux": "5.0.7",
     "react-svg-pan-zoom": "2.18.0",
     "react-tabs": "3.0.0",
-    "redux": "4.0.1",
-    "shortid": "2.2.14"
+    "redux": "4.0.5",
+    "shortid": "2.2.16"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -92,24 +93,22 @@
     "babel-preset-react": "6.24.1",
     "const-version": "2.0.0",
     "cross-env": "5.2.0",
-    "file-loader": "3.0.1",
+    "file-loader": "6.2.0",
     "gh-pages": "2.0.1",
-    "immutable-devtools": "0.1.4",
-    "is-wsl": "1.1.0",
-    "open-browser-webpack-plugin": "0.0.5",
+    "immutable-devtools": "0.1.5",
     "react": "16.8.5",
     "react-container-dimensions": "1.4.1",
     "react-dom": "16.8.5",
     "rimraf": "2.6.3",
-    "style-loader": "0.23.1",
+    "style-loader": "2.0.0",
     "three": "0.94.0",
-    "webpack": "4.29.6",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.2.1"
+    "webpack": "5.25.0",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2"
   },
   "peerDependencies": {
-    "react": "16.x",
-    "react-dom": "16.x",
+    "react": "17.x",
+    "react-dom": "17.x",
     "three": "0.94.x"
   }
 }
