--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "react-planner",
   "version": "2.1.2",
   "description": "react-planner is a React Component for plans design. Draw a 2D floorplan and navigate it in 3D mode.",
-  "main": "lib/index.js",
+  "main": "dist/lib/react-planner-library.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
+  "private": true,
   "scripts": {
     "dev": "webpack serve --config demo/webpack.config.js --mode development --env development",
     "build-demo": "webpack --config demo/webpack.config.js --mode production  --env production",
     "build-commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
     "build-es": "cross-env BABEL_ENV=es babel src --copy-files --out-dir es",
+    "build:lib": "webpack --mode production",
     "build": "npm run clean && npm run build-demo && npm run build-commonjs && npm run build-es",
     "add-build-to-vcs": "git add -A src/version.js && git add -A es && git add -A lib && git add -A demo/dist",
     "clean": "rimraf lib es demo/dist",
@@ -68,15 +70,15 @@
     "@mapbox/react-range": "0.0.7",
     "area-polygon": "1.0.1",
     "convert-units": "2.3.4",
-    "html-webpack-plugin": "5.3.1",
     "file-saver": "^2.0.1",
+    "html-webpack-plugin": "5.3.1",
     "immutable": "3.8.2",
     "immutablediff": "0.4.4",
     "immutablepatch": "0.5.0",
+    "lodash.debounce": "^4.0.8",
     "node-polyfill-webpack-plugin": "^1.0.3",
     "path-browserify": "^1.0.1",
     "polylabel": "1.1.0",
-    "lodash.debounce": "^4.0.8",
     "prop-types": "15.7.2",
     "react-icons": "3.5.0",
     "react-redux": "5.0.7",
@@ -96,10 +98,11 @@
     "babel-preset-react": "6.24.1",
     "const-version": "2.0.0",
     "cross-env": "5.2.0",
+    "css-loader": "^5.1.3",
+    "exports-loader": "^0.7.0",
     "file-loader": "6.2.0",
     "gh-pages": "2.0.1",
     "immutable-devtools": "0.1.5",
-    "exports-loader": "^0.7.0",
     "import-loader": "^1.0.1",
     "imports-loader": "^0.8.0",
     "open-browser-webpack-plugin": "0.0.5",
