--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.2",
   "description": "react-planner is a React Component for plans design. Draw a 2D floorplan and navigate it in 3D mode.",
   "main": "dist/lib/react-planner-library.js",
-  "module": "es/index.js",
+  "module": "dist/lib/react-planner-library.js",
   "jsnext:main": "es/index.js",
   "private": true,
   "scripts": {
